fix template modal overflow css issue

--- a/src/components/templates-modal/editor.scss
+++ b/src/components/templates-modal/editor.scss
@@ -17,7 +17,7 @@ body .c9-templates-modal {
 	}
 
 	.components-tab-panel__tab-content {
-		height: calc(65vh - 25px);
+		height: calc(65vh - 50px);
 		overflow: scroll;
 	}
 
